fixed clipping on category img

--- a/src/components/RadioOption/RadioOption.css
+++ b/src/components/RadioOption/RadioOption.css
@@ -50,7 +50,7 @@ category:hover {
 }
 
 .category__image-container {
-  width: 100%;
+  width: 80%;
   overflow: hidden;
 }
 
